--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -25,19 +25,20 @@
 // ---------------------------------------------------------------------------
 // General site colors
 
-//$base-color				: #222;
-//$body-color      	: #e8e8e8;
-//$text-color      	: #222;
+$base-color				: #222;
+$body-color      	: #FDFCFC;
+$text-color      	: #8E8E8E;
 //$comp-color 	 		: adjust-hue($base-color, 180); 
 //$border-color    	: lighten($base-color,60);
 //$white           	: #fff;
 //$black           	: #000;
-//$link-color 		  : #222;
+$site-blue: #26bced;
+$link-color: $site-blue;
 
 // --------------------------------------------------
 // Button colors
 
-//$primary		: $base-color;
+$primary		: $site-blue;
 //$success		: #5cb85c;
 //$warning		: #dd8338;
 //$danger			: #C64537;
